sql-diagnosis: polish i18n

--- a/ui/src/apps/diagnose/translations/en.yaml
+++ b/ui/src/apps/diagnose/translations/en.yaml
@@ -5,4 +5,4 @@ diagnose:
     end_time: End Time
   gen_report: Generate Diagnose Report
   keep_wait: It takes some time, keep patience
-  open_link: in case the browser block opening the new tab, please open the link manually
+  open_link: In case the browser blocks opening the new tab, please open the link manually
