[Update] Update frontend i18N
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterinfo/translations/en.yaml
+++ b/ui/src/apps/clusterinfo/translations/en.yaml
@@ -3,3 +3,10 @@ clusterInfo:
     up: UP
     abnormal: ABNORMAL
     nodes: NODES
+  componentTable:
+    ip: IP
+    port: Port
+    status: Status
+    deploy_dir: Deploy Directory
+    status_port: Status Port
+    version: Version
