--- a/ui/src/apps/clusterinfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterinfo/translations/zh-CN.yaml
@@ -3,3 +3,10 @@ clusterinfo:
     up: 正常
     abnormal: 不正常
     nodes: 节点
+  componentTable:
+    ip: IP
+    port: 端口
+    status: 状态
+    deploy_dir: 部署地址
+    status_port: 状态端口
+    version: 版本
