--- a/ui/src/apps/clusterinfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterinfo/translations/zh-CN.yaml
@@ -1,9 +1,10 @@
 clusterinfo:
+  nav_title: 集群信息
   status:
     up: 正常
     abnormal: 不正常
     nodes: 节点
-  componentTable:
+  component_table:
     ip: IP
     port: 端口
     status: 状态
