--- a/ui/src/apps/statement/translations/en.yaml
+++ b/ui/src/apps/statement/translations/en.yaml
@@ -1,5 +1,5 @@
 statement:
-  nav_title: Statement
+  nav_title: Statements
   filters:
     select_time: Select time range
     select_schemas: Select schemas
