--- a/ui/src/apps/clusterInfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterInfo/translations/zh-CN.yaml
@@ -8,7 +8,7 @@ cluster_info:
     ip: IP
     port: 端口
     status: 状态
-    deploy_dir: 部署地址
+    deploy_path: 部署地址
     status_port: 状态端口
     version: 版本
     address: 地址
@@ -17,6 +17,8 @@ cluster_info:
   monitor_alert:
     title: 监控和告警
     view_monitor: 查看监控
+    view_monitor_warn: 监控不可用
     view_alerts: 参看告警
+    view_alerts_warn: 告警不可用
     problems: 问题
     diagnose: 运行诊断
