--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -14,6 +14,8 @@ cluster_info:
     address: Address
 
     node_list: NODES LIST
+    del_db: HIDE
+    action: Action
   monitor_alert:
     title: MONITOR AND ALERT
     view_monitor: VIEW MONITOR
