--- a/ui/src/apps/clusterInfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterInfo/translations/zh-CN.yaml
@@ -14,6 +14,8 @@ cluster_info:
     address: 地址
 
     node_list: 节点列表
+    del_db: 隐藏
+    action: 操作
   monitor_alert:
     title: 监控和告警
     view_monitor: 查看监控
