statements: extract schemas from table_names column
Signed-off-by: baurine <2008.hbl@gmail.com>

--- a/ui/src/apps/statement/translations/en.yaml
+++ b/ui/src/apps/statement/translations/en.yaml
@@ -5,6 +5,7 @@ statement:
     select_schemas: Select schemas
   common:
     schema: Schema
+    schemas: Schemas
     digest_text: SQL Category
     sum_latency: Sum Latency
     exec_count: Exec Count
