--- a/ui/src/apps/statement/translations/en.yaml
+++ b/ui/src/apps/statement/translations/en.yaml
@@ -20,3 +20,6 @@ statement:
     time_range: Time Range
     query_sample_text: Last SQL Statement
     last_seen: Last Seen
+  plan:
+    plan: Plan
+    prev_sample_text: Previous Statement
