statements: update the plan table
Signed-off-by: baurine <2008.hbl@gmail.com>

--- a/ui/src/apps/statement/translations/en.yaml
+++ b/ui/src/apps/statement/translations/en.yaml
@@ -21,5 +21,4 @@ statement:
     query_sample_text: Last SQL Statement
     last_seen: Last Seen
   plan:
-    plan: Plan
-    prev_sample_text: Previous Statement
+    plans: Plans
