--- a/ui/src/apps/logSearching/translations/en.yaml
+++ b/ui/src/apps/logSearching/translations/en.yaml
@@ -1,8 +1,14 @@
 log_searching:
   nav_title: Search Logs
+  nav:
+    log_searching: Log Searching
+    detail: Detail
+    history: History
   page:
     intro: Preview and download logs by clicking Search
     tip: The preview shows only the first 500 logs
+    view: View
+    search_histroy: search histroy
   common:
     time_range: Time Range
     log_level: Log Level
@@ -27,3 +33,12 @@ log_searching:
     level: Level
     component: Component
     log: Log
+  history:
+    running: running
+    finished: finished
+    delete_selected: Delete selected
+    delete_all: Delete All
+    state: State
+    action: Action
+    detail: Detail
+    delete: Delete
