--- a/ui/src/apps/logSearching/translations/zh-CN.yaml
+++ b/ui/src/apps/logSearching/translations/zh-CN.yaml
@@ -1,8 +1,14 @@
 log_searching:
   nav_title: 日志搜索
+  nav:
+    log_searching: 日志搜索
+    detail: 搜索详情
+    history: 历史搜索
   page:
     intro: 点击搜索预览和下载日志
     tip: 预览仅显示前 500 项日志
+    view: 查看
+    search_histroy: 搜索历史
   common:
     time_range: 时间范围
     log_level: 日志等级
@@ -27,3 +33,12 @@ log_searching:
     level: 日志等级
     component: 组件
     log: 日志
+  history:
+    running: 正在运行
+    finished: 已完成
+    delete_selected: 删除选中的任务
+    delete_all: 删除全部任务
+    state: 状态
+    action: 操作
+    detail: 查看详情
+    delete: 删除
