--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -14,6 +14,11 @@ cluster_info:
     address: Address
 
     node_list: NODES LIST
+
+    up: up
+    down: down
+    tombstone: tombstone
+    offline: offline
   monitor_alert:
     title: MONITOR AND ALERT
     view_monitor: VIEW MONITOR
