--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -17,7 +17,7 @@ cluster_info:
     hide_db: HIDE
     action: Action
 
-    hide_warning: Do you want to hide this TiDB key?
+    hide_warning: Do you want to hide this TiDB?
     hide_confirm: OK
     hide_cancel: Cancel
   monitor_alert:
