[FIX] fix i18n by comments
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -15,10 +15,10 @@ cluster_info:
 
     node_list: NODES LIST
 
-    up: up
-    down: down
-    tombstone: tombstone
-    offline: offline
+    up: Up
+    down: Down
+    tombstone: Tombstone
+    offline: Offline
   monitor_alert:
     title: MONITOR AND ALERT
     view_monitor: VIEW MONITOR
