--- a/ui/src/apps/clusterInfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterInfo/translations/zh-CN.yaml
@@ -17,7 +17,7 @@ cluster_info:
 
     up: 正常
     down: 关闭
-    tombstone: 下线
+    tombstone: 已下线
     offline: 下线中
   monitor_alert:
     title: 监控和告警
