--- a/ui/src/apps/clusterInfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterInfo/translations/zh-CN.yaml
@@ -14,7 +14,7 @@ cluster_info:
     address: 地址
 
     node_list: 节点列表
-    hide_db: 隐藏
+    hide_db: '隐藏 {{nodeName}}'
     action: 操作
 
     hide_warning: '你希望隐藏 TiDB 节点 {{nodeName}} 吗？'
