--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -17,7 +17,7 @@ cluster_info:
     action: Action
 
     hide_db:
-      title: 'HIDE TiDB Node'
+      title: HIDE
       action: 'HIDE {{nodeName}}'
       warning: 'Do you want to hide TiDB node {{nodeName}}?'
       confirm: OK
