Update profiling page use new components
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/src/apps/nodeProfiling/translations/en.yaml
+++ b/ui/src/apps/nodeProfiling/translations/en.yaml
@@ -23,9 +23,11 @@ node_profiling:
       actions:
         detail: Detail
   detail:
+    head:
+      back: History
+      title: Profiling Detail
     download: Download Profiling Result
     table:
-      title: Profiling Detail
       columns:
         node: Node
         kind: Kind
