[FIX] address comment.
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -17,7 +17,7 @@ cluster_info:
     action: Action
 
     hide_db:
-      title: HIDE
+      title: Hide
       warning: 'Do you want to hide TiDB node {{nodeName}}?'
       confirm: OK
       cancel: Cancel
