--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -14,6 +14,14 @@ cluster_info:
     address: Address
 
     node_list: NODES LIST
+    action: Action
+
+    hide_db:
+      title: Hide
+      warning: 'Do you want to hide TiDB node {{nodeName}}?'
+      confirm: OK
+      cancel: Cancel
+      click: HIDE
 
     up: Up
     down: Down
