[Init] add warning
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -18,3 +18,5 @@ cluster_info:
         tombstone: Tombstone
         offline: Offline
         unknown: Unknown
+  error:
+    load: 'Load {{comp}} error'
