--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -19,4 +19,4 @@ cluster_info:
         offline: Offline
         unknown: Unknown
   error:
-    load: 'Load {{comp}} error'
+    load: 'Load component {{comp}} error: {{cause}}'
