--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -18,3 +18,5 @@ cluster_info:
         tombstone: Tombstone
         offline: Offline
         unknown: Unknown
+        unreachable: Unreachable
+        disconnected: Disconnected
