--- a/ui/src/apps/clusterInfo/translations/zh-CN.yaml
+++ b/ui/src/apps/clusterInfo/translations/zh-CN.yaml
@@ -18,3 +18,5 @@ cluster_info:
         tombstone: 已缩容下线
         offline: 下线中
         unknown: 未知
+        unreachable: 无法访问
+        disconnected: 断开连接
