--- a/ui/src/apps/diagnose/translations/zh-CN.yaml
+++ b/ui/src/apps/diagnose/translations/zh-CN.yaml
@@ -3,7 +3,7 @@ diagnose:
   generate:
     title: 生成诊断报告
     range_begin: 诊断区间起始时间
-    range_duration: 区间大小 (分钟)
+    range_duration: 区间时长 (分钟)
     is_compare: 与其他区间对比
     compare_range_begin: 基线区间起始时间
     submit: 生成报告
