--- a/ui/src/apps/diagnose/translations/en.yaml
+++ b/ui/src/apps/diagnose/translations/en.yaml
@@ -2,10 +2,10 @@ diagnose:
   nav_title: Cluster Diagnose
   generate:
     title: New Diagnose Report
-    range_begin: Diagnose Begin Range
-    range_duration: Range Size
+    range_begin: Range Start Time
+    range_duration: Range Duration
     is_compare: Compare by Baseline
-    compare_range_begin: Baseline Begin Range
+    compare_range_begin: Baseline Range Start Time
     submit: Generate
   status:
     head:
