--- a/ui/src/apps/diagnose/translations/en.yaml
+++ b/ui/src/apps/diagnose/translations/en.yaml
@@ -16,3 +16,9 @@ diagnose:
     range_end: Range End Time
     baseline_begin: Baseline Range Start Time
     progress: Progress
+  time_duration:
+    min: min
+    min_with_count: '{{count}} min'
+    hour_with_count: '{{count}} hour'
+    day_with_count: '{{count}} day'
+    custom: Custom
