--- a/ui/src/apps/diagnose/translations/zh-CN.yaml
+++ b/ui/src/apps/diagnose/translations/zh-CN.yaml
@@ -16,3 +16,9 @@ diagnose:
     range_end: 区间结束时间
     baseline_begin: 基线区间起始时间
     progress: 生成进度
+  time_duration:
+    min: 分钟
+    min_with_count: '{{count}} 分钟'
+    hour_with_count: '{{count}} 小时'
+    day_with_count: '{{count}} 天'
+    custom: 自定义
