ui: SearchHeader add reasonable error message
Signed-off-by: ssebo <ssebo.zzz@gmail.com>

--- a/ui/src/apps/searchLogs/translations/en.yaml
+++ b/ui/src/apps/searchLogs/translations/en.yaml
@@ -44,3 +44,6 @@ search_logs:
     action: Action
     detail: Detail
     delete: Delete
+  error:
+    search_log: Failed to start a new search task, please try again later.
+    download_log: Failed to download search log, please try again later.
