clusterinfo: add warning for getting messages (#267)
* [Init] add warning

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] Polish

Signed-off-by: mapleFU <1506118561@qq.com>

* [Remove] Remove nodes.

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] ADD warning

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] add same colour checking

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] Solve comments.

Signed-off-by: mapleFU <1506118561@qq.com>

* [FIX] address comment

Signed-off-by: mapleFU <1506118561@qq.com>

* [FIX] Fix last

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] Update and fix logic.

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] Update code.

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] Update init-warning.

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] Update interface and introduce error in component arguments.

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] Extract status and change the counting logic.

Signed-off-by: mapleFU <1506118561@qq.com>

* [ADD] update and add init-warning.

Signed-off-by: mapleFU <1506118561@qq.com>

* [FIX] Remove unused links.

Signed-off-by: mapleFU <1506118561@qq.com>

* [Remove] Remove useless dependency.

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] Update translation data

Signed-off-by: mapleFU <1506118561@qq.com>

* [Update] remove warning

Signed-off-by: mapleFU <1506118561@qq.com>

* [DELETE] delete translation.

Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -20,3 +20,5 @@ cluster_info:
         offline: Offline
         unknown: Unknown
         unreachable: Unreachable
+  error:
+    load: 'Load component {{comp}} error: {{cause}}'
