auth: login tikv mode
Signed-off-by: ssebo <ssebo.zzz@gmail.com>

--- a/ui/src/layout/translations/en.yaml
+++ b/ui/src/layout/translations/en.yaml
@@ -17,10 +17,14 @@ signin:
     username: Username
     password: Password
     button: Sign In
-    tidb_auth:
-      title: SQL User Sign In
+    auth:
+      mode: Auth Mode
+      kv_title: KV Mode Sign In
+      sql_title: SQL User Sign In
       check:
         message: Username is required
+      sql_mode: SQL User
+      kv_mode: TiKV Mode
 nav:
   user:
     signout: Sign Out
