--- a/ui/src/externalEntries/diagnoseReport/translations/zh-CN.yaml
+++ b/ui/src/externalEntries/diagnoseReport/translations/zh-CN.yaml
@@ -9,47 +9,47 @@ diagnosis:
     report_time_range: 报告时间范围
     diagnose: 诊断
     total_time_consume: 总的时间消耗
-    total_error: Total Error
-    time_consume: Time Consume
-    transaction: Transaction
-    tidb_connection_count: TiDB Connection count
-    statistics_info: Statistics Info
+    total_error: 总的错误
+    time_consume: 时间消耗
+    transaction: 事务
+    tidb_connection_count: TiDB连接数
+    statistics_info: 统计信息
     ddl_owner: DDL Owner
-    scheduler_initial_config: Scheduler Initial Config
-    scheduler_change_config: Scheduler Change Config
-    tidb_gc_initial_config: TiDB GC Initial Config
-    tidb_gc_change_config: TiDB GC Change Config
-    tikv_rocksdb_initial_config: TiKV RocksDB Initial Config
-    tikv_rocksdb_change_config: TiKV RocksDB Change Config
-    tikv_raftstore_initial_config: TiKV RaftStore Initial Config
-    tikv_raftstore_change_config: TiKV RaftStore Change Config
-    pd_time_consume: PD Time Consume
-    blance_leader_region: Blance Leader/Region
+    scheduler_initial_config: 调度器初始配置
+    scheduler_change_config: 调度器修改过的配置
+    tidb_gc_initial_config: TiDB GC 初始配置
+    tidb_gc_change_config: TiDB GC 更改过的配置
+    tikv_rocksdb_initial_config: TiKV RocksDB 初始配置
+    tikv_rocksdb_change_config: TiKV RocksDB 更改过的配置
+    tikv_raftstore_initial_config: TiKV RaftStore 初始配置
+    tikv_raftstore_change_config: TiKV RaftStore 更改过的配置
+    pd_time_consume: PD 的时间消耗
+    blance_leader_region: 均衡的 Leader/Region
     approximate_region_size: Approximate Region size
-    tikv_engine_size: TiKV Engine Size
-    tikv_time_consume: TiKV Time Consume
-    scheduler_info: Scheduler Info
-    gc_info: GC Info
-    task_info: Task Info
-    snapshot_info: Snapshot Info
-    coprocessor_info: Coprocessor Info
-    raft_info: Raft Info
-    tikv_error: TiKV Error
-    tidb_current_config: TiDB Current Config
-    pd_current_config: PD Current Config
-    tikv_current_config: TiKV Current Config
-    node_load_info: Node Load Info
-    process_cpu_usage: Process CPU Usage
-    process_memory_usage: TProcess Memory Usage
-    tidb/pd_goroutines_count: TiDB/PD Goroutines Count
-    tikv_thread_cpu_usage: TiKV Thread CPU Usage
-    store_status: Store Status
-    cluster_status: Cluster Status
-    etcd_status: Etcd Status
-    cluster_info: Cluster Info
-    cache_hit: Cache Hit
-    cluster_hardware: RocksDB Time Consume
+    tikv_engine_size: TiKV Engine 大小
+    tikv_time_consume: TiKV 时间消耗
+    scheduler_info: 调度器信息
+    gc_info: GC的信息
+    task_info: 任务信息
+    snapshot_info: 快照信息
+    coprocessor_info: Coprocessor 信息
+    raft_info: Raft 信息
+    tikv_error: TiKV 错误
+    tidb_current_config: TiDB当前配置
+    pd_current_config: PD当前配置
+    tikv_current_config: TiKV当前配置
+    node_load_info: 节点负载信息
+    process_cpu_usage: CPU 消耗率
+    process_memory_usage: 内存消耗率
+    tidb/pd_goroutines_count: TiDB/PD Goroutines 数量
+    tikv_thread_cpu_usage: TiKV CPU 使用情况
+    store_status: 存储状态
+    cluster_status: 集群状态
+    etcd_status: Etcd 状态
+    cluster_info: 集群信息
+    cache_hit: 缓存命中率
+    cluster_hardware: RocksDB时间消耗
     rocksdb_time_consume: RocksDB Time Consume
-    top_10_slow_query: Top 10 Slow Query
-    top_10_slow_query_group_by_digest: Top 10 Slow Query Group By Digest
-    slow_query_with_diff_plan: Slow Query With Diff Plan
+    top_10_slow_query: 十大慢查询
+    top_10_slow_query_group_by_digest: 按摘要排序的十大慢查询
+    slow_query_with_diff_plan: 有 Diff 计划的慢查询
