--- a/ui/src/externalEntries/diagnoseReport/translations/zh-CN.yaml
+++ b/ui/src/externalEntries/diagnoseReport/translations/zh-CN.yaml
@@ -4,3 +4,52 @@ diagnosis:
   fold_all: 收起所有
   expand: 展开
   fold: 收起
+  tables:
+    generate_report_error: 生成报告的报错
+    report_time_range: 报告时间范围
+    diagnose: 诊断
+    total_time_consume: 总的时间消耗
+    total_error: 总报错数
+    time_consume: TiDB 时间消耗
+    transaction: TiDB 事务
+    tidb_connection_count: TiDB 连接数
+    statistics_info: 统计信息
+    ddl_owner: DDL Owner
+    scheduler_initial_config: 调度器初始配置
+    scheduler_change_config: 调度器配置修改历史
+    tidb_gc_initial_config: TiDB GC 初始配置
+    tidb_gc_change_config: TiDB GC 配置修改历史
+    tikv_rocksdb_initial_config: TiKV RocksDB 初始配置
+    tikv_rocksdb_change_config: TiKV RocksDB 配置修改历史
+    tikv_raftstore_initial_config: TiKV RaftStore 初始配置
+    tikv_raftstore_change_config: TiKV RaftStore 配置修改历史
+    pd_time_consume: PD 时间消耗
+    blance_leader_region: Leader/Region 调度数
+    approximate_region_size: Approximate Region 大小
+    tikv_engine_size: TiKV 实例存储大小
+    tikv_time_consume: TiKV 时间消耗
+    scheduler_info: TiKV 调度器信息
+    gc_info: GC 信息
+    task_info: TiKV 任务信息
+    snapshot_info: TiKV 快照信息
+    coprocessor_info: Coprocessor 信息
+    raft_info: Raft 信息
+    tikv_error: TiKV 错误
+    tidb_current_config: TiDB 当前配置
+    pd_current_config: PD 当前配置
+    tikv_current_config: TiKV 当前配置
+    node_load_info: 节点负载信息
+    process_cpu_usage: 实例 CPU 使用率
+    process_memory_usage: 实例的内存消耗
+    tidb/pd_goroutines_count: TiDB/PD Goroutines 数量
+    tikv_thread_cpu_usage: TiKV 的 CPU 使用情况
+    store_status: TiKV 节点的存储状态
+    cluster_status: 集群状态
+    etcd_status: Etcd 状态
+    cluster_info: 集群信息
+    cache_hit: 缓存命中率
+    cluster_hardware: 集群硬件信息
+    rocksdb_time_consume: RocksDB 时间消耗
+    top_10_slow_query: Top10 慢查询
+    top_10_slow_query_group_by_digest: 按 SQL 指纹聚合的 TOP10 慢查询
+    slow_query_with_diff_plan: 不同执行计划的慢查询
