filter statements by sql type
refine method name

--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -5,6 +5,7 @@ statement:
   filters:
     select_time: Select time range
     select_schemas: Select schemas
+    select_stmt_types: Select SQL types
   common:
     schema: Schema
     schemas: Schemas
